docs: add docs/ and record the reporting design
Stages 0 and 1 are the small half of this area. Stage 2 — a generic aggregation
endpoint that would let the 42 analytics endpoints be retired — is plausible
future work, and whoever starts it should not have to reconstruct the decisions
from the diff.

docs/ and CLAUDE.md get different jobs: CLAUDE.md stays operational knowledge for
changing this codebase, short because everything in it competes for attention;
docs/ carries the reasoning behind one subsystem, long-form. A pointer from
CLAUDE.md belongs in the same commit that adds a file here, because documentation
nobody is routed to is documentation nobody reads.

docs/reporting.md records what a later change would otherwise get wrong: the
ordinal tables the views depend on, the arithmetic that is mirrored from Java on
purpose (including its rounding), the contracts of the column registry and saved
views, the inherited inm duplicate-row limitation, and the Metabase evaluation —
including that OSS embedding cannot deliver self-service — so that evaluation is
not repeated.

CLAUDE.md also gains two findings from this work:

- POST /work-orders/search returns the whole company to a user with no
  work-order view permission. getSearchCriteria only ever narrows, and the
  own-records filter sits inside the permission check, so no permission means no
  narrowing rather than no access. Upstream behaviour; AssetService gets it right
  by throwing, which is the shape a fix should take.
- The test suite cannot run on a JDK above 22. Byte Buddy 1.14.12 refuses to
  instrument newer class files, so every Mockito test errors in startMocking
  before reaching project code, and -Dnet.bytebuddy.experimental=true does not
  help. Worth writing down because such a failure reads like a code fault.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>